Suite TP base du JS

--- a/multiplication.html
+++ b/multiplication.html
@@ -13,12 +13,13 @@
         Écrire un algorithme qui demande un nombre de départ, et qui ensuite écrit la 
         table de multiplication de ce nombre, présentée comme suit (cas où l'utilisateur 
         entre le nombre 7) : 
-*/
-    let nbr = prompt("Entrez un nombre")
-    let fin = 10;
-    for (let i=0; i<=nbr; i++) {
-        console.log(nbr +" x " +i + " = "+ nbr*i);
-    }
+        */
+        let nbr = prompt("Entrez un nombre")
+        let fin = 0;
+        while (fin<=10) {
+            console.log(nbr +" x " +fin + " = "+ nbr*fin);
+            fin++
+        }
     </script>
 </body>
 </html>
